--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace "im.nfc.flutter_nfc_kit"
     compileSdkVersion 31
 
     sourceSets {
